--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 .banner {
     min-height: 100vh;
-    background: #120e0f url(/img/bg.jpg);
+    background: #120e0f url(img/bg.jpg);
     background-position: center;
     background-size: cover;
     padding: 40px 100px;
@@ -75,7 +75,7 @@ header {
     left: 0;
     width: 100%;
     height: 100vh;
-    background: #120e0f url(/img/menuBg.jpg);
+    background: #120e0f url(img/menuBg.jpg);
     background-position: right;
     background-size: cover;
     display: none;
